# any2markdown

./: .env.bak  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.minimal  Dockerfile.prod  Dockerfile.simple  LICENSE  README-en.md  README.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml  requirements-prod.txt  requirements.txt  run_server.py  test-docker-fix.sh
docs/: README.md  architecture.md  dify-workflow-dsl.yml  dify.md  mcp-tool-design.md  model-cache-configuration.md  requirements.md  restful-api-design.md  technical-design.md  todo-list.md  ui-spec.md
examples/: README.md
examples/restful-api/curl/: basic-examples.sh
examples/restful-api/python/: basic_client.py
examples/tutorials/: getting-started.md
openspec/: project.md
scripts/: build-and-push-docker.sh  check_models.py  deploy.sh  setup_model_cache.sh  setup_venv.sh
src/any2markdown_mcp/: __init__.py  config.py  exceptions.py  logger.py  server.py
src/any2markdown_mcp/api/: __init__.py  handlers.py  models.py  utils.py
src/any2markdown_mcp/models/: __init__.py  model_manager.py
src/any2markdown_mcp/processors/: __init__.py  base_processor.py  excel_processor.py  pdf_processor.py  word_processor.py
src/any2markdown_mcp/tools/: __init__.py  base_tool.py  excel_tools.py  pdf_tools.py  tool_registry.py  utility_tools.py  word_tools.py
